--- a/styling1.css
+++ b/styling1.css
@@ -1,8 +1,16 @@
 /* styling1.css */
 /* element selector */
 h1 {
-  background-color:#edd9f5;
+  background-color: #edd9f5;
   text-align: center;
   color: #691b88
 }
+
+h2 {
+  background-color: #f5d4f1;
+  text-align: left;
+  color: #e033cb
+}
+
+
   
