--- a/styling1.css
+++ b/styling1.css
@@ -6,7 +6,7 @@ h1 {
 
 h2 {
   background-color: #f5d4f1;
-  text-align: left;
+  text-align: center;
   color: #e033cb;
 }
 
@@ -15,7 +15,7 @@ body {
 }
 
 p {
-  color: ##4CBEB0;
+  color: #2D2BD3;
 }
 
 
